# docs/swagger.yaml
@@ -127,6 +127,18 @@ components:
           - tree
           type: string
       type: object
+    types.VfsRes-array_string:
+      properties:
+        path:
+          type: string
+        payload:
+          type: object
+        viewType:
+          enum:
+          - list
+          - tree
+          type: string
+      type: object
     types.WriteReq:
       properties:
         content:
@@ -630,6 +642,31 @@ paths:
                 $ref: '#/components/schemas/fiber.Error'
           description: Internal Server Error
       summary: Backup all file
+      tags:
+      - vfs
+  /vfs/badger/keys:
+    get:
+      description: all keys
+      parameters:
+      - description: prefix
+        in: query
+        name: prefix
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/types.VfsRes-array_string'
+          description: OK
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/fiber.Error'
+          description: Internal Server Error
+      summary: AllKeys
       tags:
       - vfs
   /vfs/restore:
